# advent-2022

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
advent/: __init__.py  __main__.py  base.py  day1.py  day10.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
advent/utils/: point.py
tests/: test_day1.py  test_day10.py  test_day12.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
